--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,13 @@ Package: minval
 Type: Package
 Title: MINimal VALidation for Stoichiometric Reactions
 Version: 0.3
-Date: 2016-03-15
+Date: 2016-04-27
 Author: Daniel Osorio [aut,cre], Janneth Gonzalez [aut], Andres Pinzon-Velasco
     [aut]
 Maintainer: Daniel Osorio <dcosorioh@unal.edu.co>
 Suggests: RUnit
-Description: For a given set of stoichiometric reactions, this package evaluates the mass balance and extracts all reactants, products, orphan metabolites, metabolite names and compartments. Also are included some options to check the compound names associated to ChEBI database.
+Description: For a given set of stoichiometric reactions, this package evaluates the mass balance and extracts all reactants, products, orphan metabolites, metabolite names and compartments. Also are included some options to check the compound names associated to Chemical Entities of Biological Interest (ChEBI) database <https://www.ebi.ac.uk/chebi>.
 License: GPL-2
 LazyData: TRUE
 NeedsCompilation: no
-Packaged: 2016-03-13 03:57:05 UTC; Daniel
 Depends: R (>= 2.10)
-RoxygenNote: 5.0.1
