--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,4 @@ Description: For a given set of stoichiometric reactions, this package evaluates
 License: GPL-2
 LazyData: TRUE
 NeedsCompilation: no
-Depends: R (>= 2.10)
+Depends:XML, gdata, R (>= 2.10)
