--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,11 @@ Package: minval
 Type: Package
 Title: MINimal VALidation for Stoichiometric Reactions
 Version: 0.5
-Date: 2016-05-20
-Author: Daniel Osorio [aut,cre], Janneth Gonzalez [aut], Andres Pinzon-Velasco
-    [aut]
+Date: 2016-08-31
+Author: Daniel Osorio [aut,cre], Janneth Gonzalez [aut], Andres Pinzon-Velasco [aut].
 Maintainer: Daniel Osorio <dcosorioh@unal.edu.co>
 Suggests: RUnit
-Description: For a given set of stoichiometric reactions, this package evaluates the mass balance and extracts all reactants, products, orphan metabolites, metabolite names and compartments. Also are included some options to check the compound names associated to Chemical Entities of Biological Interest (ChEBI) database <https://www.ebi.ac.uk/chebi>.
+Description: For a given set of stoichiometric reactions, this package evaluates the mass and charge balance, extracts all reactants, products, orphan metabolites, metabolite names and compartments. Also are included some options to write TSV and SBML models.
 License: GPL-2
 LazyData: TRUE
 NeedsCompilation: no
