--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,21 @@ Type: Package
 Title: MINimal VALidation for Stoichiometric Reactions
 Version: 0.5
 Date: 2016-08-31
-Author: Daniel Osorio [aut,cre], Janneth Gonzalez [aut], Andres Pinzon-Velasco [aut].
+Author: Daniel Osorio [aut,cre], Janneth Gonzalez [aut], Andres Pinzon-Velasco
+    [aut].
 Maintainer: Daniel Osorio <dcosorioh@unal.edu.co>
-Suggests: RUnit
-Description: For a given set of stoichiometric reactions, this package evaluates the mass and charge balance, extracts all reactants, products, orphan metabolites, metabolite names and compartments. Also are included some options to write TSV and SBML models.
+Suggests:
+    RUnit
+Description: For a given set of stoichiometric reactions, this package
+    evaluates the mass and charge balance, extracts all reactants, products, orphan
+    metabolites, metabolite names and compartments. Also are included some options
+    to write TSV and SBML models.
 License: GPL-2
 LazyData: TRUE
 NeedsCompilation: no
-Depends: R (>= 2.10)
-Imports: XML, gdata
+Depends:
+    R (>= 2.10)
+Imports:
+    XML,
+    gdata
+RoxygenNote: 5.0.1
