--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,8 @@ export(convert2sbml)
 export(convert2sbmlR)
 export(convert2tsv)
 importFrom(XML,saveXML)
+importFrom(stats,complete.cases)
+importFrom(utils,download.file)
+importFrom(utils,read.delim2)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
