--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(compartments)
 export(convert2sbml)
 export(convert2sbmlR)
 export(convert2tsv)
+export(getChEBI)
 importFrom(XML,saveXML)
 importFrom(stats,complete.cases)
 importFrom(utils,download.file)
