--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(convert2sbml)
 export(convert2sbmlR)
 export(convert2tsv)
 export(getChEBI)
+export(isBalanced)
 importFrom(XML,saveXML)
+importFrom(XML,xmlNode)
 importFrom(stats,complete.cases)
 importFrom(utils,download.file)
 importFrom(utils,read.delim2)
