--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(convert2sbmlR)
 export(convert2tsv)
 export(getChEBI)
 export(isBalanced)
+export(isValidSyntax)
 importFrom(XML,saveXML)
 importFrom(XML,xmlNode)
 importFrom(stats,complete.cases)
