--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(convert2tsv)
 export(getChEBI)
 export(isBalanced)
 export(isValidSyntax)
+export(mapReactions)
 importFrom(XML,saveXML)
 importFrom(XML,xmlNode)
 importFrom(stats,complete.cases)
