--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,14 @@ export(getChEBI)
 export(isBalanced)
 export(isValidSyntax)
 export(mapReactions)
+export(metabolites)
+export(orphanProducts)
+export(orphanReactants)
+export(products)
+export(reactants)
+export(stoichiometricMatrix)
+export(xls2sbml)
+export(xls2tsv)
 importFrom(XML,saveXML)
 importFrom(XML,xmlNode)
 importFrom(stats,complete.cases)
