--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(compartments)
 export(convert2sbml)
 export(convert2sbmlR)
-export(convert2tsv)
 export(getChEBI)
 export(isBalanced)
 export(isValidSyntax)
@@ -14,8 +13,8 @@ export(orphanReactants)
 export(products)
 export(reactants)
 export(stoichiometricMatrix)
+export(writeTSVmod)
 export(xls2sbml)
-export(xls2tsv)
 importFrom(XML,saveXML)
 importFrom(XML,xmlNode)
 importFrom(stats,complete.cases)
