--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,14 @@ export(compartments)
 export(downloadChEBI)
 export(metabolites)
 export(orphanMetabolites)
+export(orphanProducts)
+export(orphanReactants)
 export(products)
 export(reactants)
 export(stoichiometricMatrix)
 export(validateSyntax)
+importFrom(stats,complete.cases)
+importFrom(stats,setNames)
+importFrom(utils,download.file)
+importFrom(utils,read.delim2)
+importFrom(utils,read.table)
