writeSBML and writeTSV functions were added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(products)
 export(reactants)
 export(stoichiometricMatrix)
 export(validateSyntax)
+export(writeSBML)
+export(writeTSV)
 importFrom(stats,complete.cases)
 importFrom(stats,formula)
 importFrom(stats,setNames)
