--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,4 @@ importFrom(stats,setNames)
 importFrom(utils,download.file)
 importFrom(utils,read.delim2)
 importFrom(utils,read.table)
+importFrom(utils,write.table)
