--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,9 @@ Version: 1.0
 Author: c(person("Daniel","Osorio",email="dcosorioh@unal.edu.co",role=c("aut","cre")), person("Janneth","Gonzalez",role=c("aut","ths")), person("Andr{\'e}s","Pinz{\'o}n",role=c("aut","ths")))
 Maintainer: Daniel Osorio <dcosorioh@unal.edu.co>
 Suggests:
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 Description: For a given set of stoichiometric reactions, this package
     evaluates the mass and charge balance, extracts all reactants, products, orphan
     metabolites, metabolite names and compartments. Also are included some options
@@ -16,3 +18,4 @@ NeedsCompilation: no
 Depends:
     R (>= 2.10)
 RoxygenNote: 6.0.1
+VignetteBuilder: knitr
