--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,14 @@ Package: minval
 Type: Package
 Title: MINimal VALidation for Stoichiometric Reactions
 Version: 1.0
-Author: c(person("Daniel","Osorio",email="dcosorioh@unal.edu.co",role=c("aut","cre")), person("Janneth","Gonzalez",role=c("aut","ths")), person("Andr{\'e}s","Pinz{\'o}n",role=c("aut","ths")))
+Author: c(person("Daniel","Osorio",email="dcosorioh@unal.edu.co",role=c("aut","cre")), person("Janneth","Gonzalez",role=c("aut","ths")), person("Andres","Pinzon",role=c("aut","ths")))
 Maintainer: Daniel Osorio <dcosorioh@unal.edu.co>
 Suggests:
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    sybil,
+    sybilSBML
 Description: For a given set of stoichiometric reactions, this package
     evaluates the mass and charge balance, extracts all reactants, products, orphan
     metabolites, metabolite names and compartments. Also are included some options
