--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Suggests:
 Description: For a given set of stoichiometric reactions, this package
     evaluates the mass and charge balance, extracts all reactants, products, orphan
     metabolites, metabolite names and compartments. Also are included some options
-    to write models in TSV and SBML formats.
+    to characterize and write models in TSV and SBML formats.
 License: GPL (>= 2)
 LazyData: TRUE
 NeedsCompilation: no
