Implemented the CRAN suggested changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(products)
 export(reactants)
 export(stoichiometricMatrix)
 export(validateSyntax)
-export(writeSBML)
-export(writeTSV)
+export(writeSBMLmod)
+export(writeTSVmod)
 importFrom(stats,complete.cases)
 importFrom(stats,formula)
 importFrom(stats,setNames)
