--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Suggests:
     knitr,
     rmarkdown,
     sybil,
-    sybilSBML
+    sybilSBML,
+    glpkAPI
 Description: For a given set of stoichiometric reactions, this package
     evaluates the mass and charge balance, extracts all reactants, products, orphan
     metabolites, metabolite names and compartments. Also are included some options
