--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ r_packages:
   - testthat
   
 r_build_args: --no-build-vignettes --no-resave-data
-r_check_args: --no-build-vignettes
+r_check_args: --no-build-vignettes --as-cran
+env: _R_CHECK_FORCE_SUGGESTS_=false
 
 cache: packages
 sudo: required
