--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: minval
 Type: Package
 Title: MINimal VALidation for Stoichiometric Reactions
-Version: 0.8
+Version: 0.8-1
 URL: https://github.com/gibbslab/minval
 Authors@R:c(
-          person("Daniel","Osorio", email="dcosorioh@unal.edu.co", role=c("aut","cre")), 
+          person("Daniel","Osorio", email="dcosorioh@tamu.edu", role=c("aut","cre")), 
           person("Janneth","Gonzalez", role=c("aut","ths")), 
           person("Andres","Pinzon", role=c("aut","ths"))
           )
-Maintainer: Daniel Osorio <dcosorioh@unal.edu.co>
+Maintainer: Daniel Osorio <dcosorioh@tamu.edu>
 Suggests:
     testthat,
     knitr,
