--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(writeSBMLmod)
 export(writeTSVmod)
 importFrom(stats,complete.cases)
 importFrom(stats,formula)
+importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(utils,download.file)
 importFrom(utils,read.delim2)
