--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(stoichiometricMatrix)
 export(validateSyntax)
 export(writeSBMLmod)
 export(writeTSVmod)
+importFrom(methods,is)
 importFrom(stats,complete.cases)
 importFrom(stats,formula)
 importFrom(stats,na.omit)
